# genai

./: .env.template  .gitignore  chainlit_de-DE.md  main.py  pyproject.toml
.chainlit/: config.toml
.chainlit/translations/: de-DE.json
notebooks/: experiment.ipynb
src/genai/: agent.py  agent_assistant.py  assistant.py  settings.py  transcript.py
src/telegram/: commands.py  filters.py  helpers.py  messages.py  settings.py
src/telegram/handlers/: commands.py  messages.py
tests/telegram/: test_commands.py  test_messages.py
