[project]
name = "genai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "filetype>=1.2.0",
    "pydantic>=2.11.1",
    "pydantic-ai>=0.0.55",
    "pydantic-settings>=2.8.1",
    "pydub>=0.25.1",
    "python-telegram-bot>=22.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pytest>=8.3.5",
    "ruff>=0.11.2",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = ["E501"]
